[gd_scene load_steps=6 format=2]

[ext_resource path="res://cenaInicial.gd" type="Script" id=1]
[ext_resource path="res://exe1.tscn" type="PackedScene" id=2]
[ext_resource path="res://exe2.tscn" type="PackedScene" id=3]
[ext_resource path="res://exe3.tscn" type="PackedScene" id=4]
[ext_resource path="res://exe4.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1028.0
margin_bottom = 605.0

[node name="Button1" type="Button" parent="."]
margin_left = 48.0
margin_top = 54.0
margin_right = 200.0
margin_bottom = 123.0
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 48.0
margin_top = 181.0
margin_right = 200.0
margin_bottom = 250.0
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 48.0
margin_top = 331.0
margin_right = 200.0
margin_bottom = 400.0
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 48.0
margin_top = 477.0
margin_right = 200.0
margin_bottom = 546.0
text = "4"

[node name="exe1" parent="." instance=ExtResource( 2 )]
visible = false

[node name="exe2" parent="." instance=ExtResource( 3 )]
visible = false

[node name="exe3" parent="." instance=ExtResource( 4 )]
visible = false

[node name="exe4" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
